plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0-beta4'
}

group = 'dev.oakheart'
version = '1.2.0'
description = 'RaidCooldown'

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

repositories {
    mavenCentral()

    // Paper
    maven {
        name = 'papermc-repo'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }

    // Sonatype (Adventure)
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }

    // bStats
    maven {
        name = 'CodeMC'
        url = 'https://repo.codemc.org/repository/maven-public/'
    }
}

dependencies {
    // Paper API
    compileOnly 'io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT'

    // Adventure (included in Paper, but explicit for clarity)
    compileOnly 'net.kyori:adventure-api:4.14.0'
    compileOnly 'net.kyori:adventure-text-minimessage:4.14.0'

    // bStats
    implementation 'org.bstats:bstats-bukkit:3.1.0'

    // Testing dependencies
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    testImplementation 'org.mockito:mockito-core:5.1.1'
}

// Configure the shadow plugin
shadowJar {
    // Don't include Paper/Adventure APIs
    dependencies {
        exclude(dependency('io.papermc.paper:.*'))
        exclude(dependency('net.kyori:.*'))
    }

    archiveClassifier.set('')
    archiveFileName.set("${project.name}-${project.version}.jar")

    // Relocate bStats to avoid conflicts with other plugins
    relocate 'org.bstats', 'dev.oakheart.raidcooldown.bstats'
}

// Make build use shadowJar
build {
    dependsOn shadowJar
}

processResources {
    def props = [version: version, description: description]
    inputs.properties props

    filteringCharset 'UTF-8'
    filesMatching('plugin.yml') {
        expand props
    }
}

test {
    useJUnitPlatform()
}

// Source and target compatibility
compileJava {
    options.encoding = 'UTF-8'
    options.release = 21
}

javadoc {
    options.encoding = 'UTF-8'
}